[project]
name = "rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.105.2",
    "fastapi[standard]>=0.138.0",
    "fastembed>=0.8.0",
    "langchain>=1.3.2",
    "langchain-anthropic>=1.4.4",
    "langchain-community>=0.4.2",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langchain-qdrant>=1.1.0",
    "langsmith>=0.8.7",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.5.1",
]
